_generated-doc/3.8/config/quarkus-smallrye-openapi-small-rye-open-api-config.adoc

:summaryTableId: quarkus-smallrye-openapi-small-rye-open-api-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-smallrye-openapi-small-rye-open-api-config_configuration]]link:#quarkus-smallrye-openapi-small-rye-open-api-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-openapi-small-rye-open-api-config_quarkus-smallrye-openapi-path]]`link:#quarkus-smallrye-openapi-small-rye-open-api-config_quarkus-smallrye-openapi-path[quarkus.smallrye-openapi.path]`


[.description]
--
The path at which to register the OpenAPI Servlet.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_OPENAPI_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_OPENAPI_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|`openapi`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-openapi-small-rye-open-api-config_quarkus-smallrye-openapi-store-schema-directory]]`link:#quarkus-smallrye-openapi-small-rye-open-api-config_quarkus-smallrye-openapi-store-schema-directory[quarkus.smallrye-openapi.store-schema-directory]`


[.description]
--
If set, the generated OpenAPI schema documents will be stored here on build. Both openapi.json and openapi.yaml will be stored here if this is set.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_OPENAPI_STORE_SCHEMA_DIRECTORY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_OPENAPI_STORE_SCHEMA_DIRECTORY+++`
endif::add-copy-button-to-env-var[]
--|path 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-openapi-small-rye-open-api-config_quarkus-smallrye-openapi-always-run-filter]]`link:#quarkus-smallrye-openapi-small-rye-open-api-config_quarkus-smallrye-openapi-always-run-filter[quarkus.smallrye-openapi.always-run-filter]`


[.description]
--
Do not run the filter only at startup, but every time the document is requested (dynamic).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_OPENAPI_ALWAYS_RUN_FILTER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_OPENAPI_ALWAYS_RUN_FILTER+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-openapi-small-rye-open-api-config_quarkus-smallrye-openapi-ignore-static-document]]`link:#quarkus-smallrye-openapi-small-rye-open-api-config_quarkus-smallrye-openapi-ignore-static-document[quarkus.smallrye-openapi.ignore-static-document]`


[.description]
--
Do not include the provided static openapi document (eg. META-INF/openapi.yaml)

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_OPENAPI_IGNORE_STATIC_DOCUMENT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_OPENAPI_IGNORE_STATIC_DOCUMENT+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-openapi-small-rye-open-api-config_quarkus-smallrye-openapi-management-enabled]]`link:#quarkus-smallrye-openapi-small-rye-open-api-config_quarkus-smallrye-openapi-management-enabled[quarkus.smallrye-openapi.management.enabled]`


[.description]
--
If management interface is turned on the openapi schema document will be published under the management interface. This allows you to exclude OpenAPI from management by setting the value to false

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_OPENAPI_MANAGEMENT_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_OPENAPI_MANAGEMENT_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-openapi-small-rye-open-api-config_quarkus-smallrye-openapi-additional-docs-directory]]`link:#quarkus-smallrye-openapi-small-rye-open-api-config_quarkus-smallrye-openapi-additional-docs-directory[quarkus.smallrye-openapi.additional-docs-directory]`


[.description]
--
A list of local directories that should be scanned for yaml and/or json files to be included in the static model. Example: `META-INF/openapi/`

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_OPENAPI_ADDITIONAL_DOCS_DIRECTORY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_OPENAPI_ADDITIONAL_DOCS_DIRECTORY+++`
endif::add-copy-button-to-env-var[]
--|list of path 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-openapi-small-rye-open-api-config_quarkus-smallrye-openapi-security-scheme]]`link:#quarkus-smallrye-openapi-small-rye-open-api-config_quarkus-smallrye-openapi-security-scheme[quarkus.smallrye-openapi.security-scheme]`


[.description]
--
Add a certain SecurityScheme with config

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_OPENAPI_SECURITY_SCHEME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_OPENAPI_SECURITY_SCHEME+++`
endif::add-copy-button-to-env-var[]
-- a|
`api-key`, `basic`, `jwt`, `oauth2`, `oidc`, `oauth2-implicit` 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-openapi-small-rye-open-api-config_quarkus-smallrye-openapi-security-scheme-name]]`link:#quarkus-smallrye-openapi-small-rye-open-api-config_quarkus-smallrye-openapi-security-scheme-name[quarkus.smallrye-openapi.security-scheme-name]`


[.description]
--
Add a Security Scheme name to the generated OpenAPI document

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_OPENAPI_SECURITY_SCHEME_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_OPENAPI_SECURITY_SCHEME_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|`SecurityScheme`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-openapi-small-rye-open-api-config_quarkus-smallrye-openapi-security-scheme-description]]`link:#quarkus-smallrye-openapi-small-rye-open-api-config_quarkus-smallrye-openapi-security-scheme-description[quarkus.smallrye-openapi.security-scheme-description]`


[.description]
--
Add a description to the Security Scheme

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_OPENAPI_SECURITY_SCHEME_DESCRIPTION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_OPENAPI_SECURITY_SCHEME_DESCRIPTION+++`
endif::add-copy-button-to-env-var[]
--|string 
|`Authentication`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-openapi-small-rye-open-api-config_quarkus-smallrye-openapi-auto-add-security-requirement]]`link:#quarkus-smallrye-openapi-small-rye-open-api-config_quarkus-smallrye-openapi-auto-add-security-requirement[quarkus.smallrye-openapi.auto-add-security-requirement]`


[.description]
--
This will automatically add the security requirement to all methods/classes that has a `RolesAllowed` annotation.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_OPENAPI_AUTO_ADD_SECURITY_REQUIREMENT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_OPENAPI_AUTO_ADD_SECURITY_REQUIREMENT+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-openapi-small-rye-open-api-config_quarkus-smallrye-openapi-auto-add-tags]]`link:#quarkus-smallrye-openapi-small-rye-open-api-config_quarkus-smallrye-openapi-auto-add-tags[quarkus.smallrye-openapi.auto-add-tags]`


[.description]
--
This will automatically add tags to operations based on the Java class name.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_OPENAPI_AUTO_ADD_TAGS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_OPENAPI_AUTO_ADD_TAGS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-openapi-small-rye-open-api-config_quarkus-smallrye-openapi-auto-add-server]]`link:#quarkus-smallrye-openapi-small-rye-open-api-config_quarkus-smallrye-openapi-auto-add-server[quarkus.smallrye-openapi.auto-add-server]`


[.description]
--
Setting it to `true` will automatically add a default server to the schema if none is provided, using the current running server host and port.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_OPENAPI_AUTO_ADD_SERVER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_OPENAPI_AUTO_ADD_SERVER+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-openapi-small-rye-open-api-config_quarkus-smallrye-openapi-auto-add-security]]`link:#quarkus-smallrye-openapi-small-rye-open-api-config_quarkus-smallrye-openapi-auto-add-security[quarkus.smallrye-openapi.auto-add-security]`


[.description]
--
This will automatically add security based on the security extension included (if any).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_OPENAPI_AUTO_ADD_SECURITY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_OPENAPI_AUTO_ADD_SECURITY+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-openapi-small-rye-open-api-config_quarkus-smallrye-openapi-api-key-parameter-in]]`link:#quarkus-smallrye-openapi-small-rye-open-api-config_quarkus-smallrye-openapi-api-key-parameter-in[quarkus.smallrye-openapi.api-key-parameter-in]`


[.description]
--
Required when using `apiKey` security. The location of the API key. Valid values are "query", "header" or "cookie".

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_OPENAPI_API_KEY_PARAMETER_IN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_OPENAPI_API_KEY_PARAMETER_IN+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-openapi-small-rye-open-api-config_quarkus-smallrye-openapi-api-key-parameter-name]]`link:#quarkus-smallrye-openapi-small-rye-open-api-config_quarkus-smallrye-openapi-api-key-parameter-name[quarkus.smallrye-openapi.api-key-parameter-name]`


[.description]
--
Required when using `apiKey` security. The name of the header, query or cookie parameter to be used.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_OPENAPI_API_KEY_PARAMETER_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_OPENAPI_API_KEY_PARAMETER_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-openapi-small-rye-open-api-config_quarkus-smallrye-openapi-basic-security-scheme-value]]`link:#quarkus-smallrye-openapi-small-rye-open-api-config_quarkus-smallrye-openapi-basic-security-scheme-value[quarkus.smallrye-openapi.basic-security-scheme-value]`


[.description]
--
Add a scheme value to the Basic HTTP Security Scheme

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_OPENAPI_BASIC_SECURITY_SCHEME_VALUE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_OPENAPI_BASIC_SECURITY_SCHEME_VALUE+++`
endif::add-copy-button-to-env-var[]
--|string 
|`basic`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-openapi-small-rye-open-api-config_quarkus-smallrye-openapi-jwt-security-scheme-value]]`link:#quarkus-smallrye-openapi-small-rye-open-api-config_quarkus-smallrye-openapi-jwt-security-scheme-value[quarkus.smallrye-openapi.jwt-security-scheme-value]`


[.description]
--
Add a scheme value to the JWT Security Scheme

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_OPENAPI_JWT_SECURITY_SCHEME_VALUE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_OPENAPI_JWT_SECURITY_SCHEME_VALUE+++`
endif::add-copy-button-to-env-var[]
--|string 
|`bearer`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-openapi-small-rye-open-api-config_quarkus-smallrye-openapi-jwt-bearer-format]]`link:#quarkus-smallrye-openapi-small-rye-open-api-config_quarkus-smallrye-openapi-jwt-bearer-format[quarkus.smallrye-openapi.jwt-bearer-format]`


[.description]
--
Add a bearer format the JWT Security Scheme

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_OPENAPI_JWT_BEARER_FORMAT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_OPENAPI_JWT_BEARER_FORMAT+++`
endif::add-copy-button-to-env-var[]
--|string 
|`JWT`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-openapi-small-rye-open-api-config_quarkus-smallrye-openapi-oauth2-security-scheme-value]]`link:#quarkus-smallrye-openapi-small-rye-open-api-config_quarkus-smallrye-openapi-oauth2-security-scheme-value[quarkus.smallrye-openapi.oauth2-security-scheme-value]`


[.description]
--
Add a scheme value to the OAuth2 opaque token Security Scheme

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_OPENAPI_OAUTH2_SECURITY_SCHEME_VALUE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_OPENAPI_OAUTH2_SECURITY_SCHEME_VALUE+++`
endif::add-copy-button-to-env-var[]
--|string 
|`bearer`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-openapi-small-rye-open-api-config_quarkus-smallrye-openapi-oauth2-bearer-format]]`link:#quarkus-smallrye-openapi-small-rye-open-api-config_quarkus-smallrye-openapi-oauth2-bearer-format[quarkus.smallrye-openapi.oauth2-bearer-format]`


[.description]
--
Add a scheme value to OAuth2 opaque token Security Scheme

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_OPENAPI_OAUTH2_BEARER_FORMAT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_OPENAPI_OAUTH2_BEARER_FORMAT+++`
endif::add-copy-button-to-env-var[]
--|string 
|`Opaque`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-openapi-small-rye-open-api-config_quarkus-smallrye-openapi-oidc-open-id-connect-url]]`link:#quarkus-smallrye-openapi-small-rye-open-api-config_quarkus-smallrye-openapi-oidc-open-id-connect-url[quarkus.smallrye-openapi.oidc-open-id-connect-url]`


[.description]
--
Add a openIdConnectUrl value to the OIDC Security Scheme

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_OPENAPI_OIDC_OPEN_ID_CONNECT_URL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_OPENAPI_OIDC_OPEN_ID_CONNECT_URL+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-openapi-small-rye-open-api-config_quarkus-smallrye-openapi-oauth2-implicit-refresh-url]]`link:#quarkus-smallrye-openapi-small-rye-open-api-config_quarkus-smallrye-openapi-oauth2-implicit-refresh-url[quarkus.smallrye-openapi.oauth2-implicit-refresh-url]`


[.description]
--
Add a implicit flow refreshUrl value to the OAuth2 Security Scheme

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_OPENAPI_OAUTH2_IMPLICIT_REFRESH_URL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_OPENAPI_OAUTH2_IMPLICIT_REFRESH_URL+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-openapi-small-rye-open-api-config_quarkus-smallrye-openapi-oauth2-implicit-authorization-url]]`link:#quarkus-smallrye-openapi-small-rye-open-api-config_quarkus-smallrye-openapi-oauth2-implicit-authorization-url[quarkus.smallrye-openapi.oauth2-implicit-authorization-url]`


[.description]
--
Add an implicit flow authorizationUrl value to the OAuth2 Security Scheme

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_OPENAPI_OAUTH2_IMPLICIT_AUTHORIZATION_URL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_OPENAPI_OAUTH2_IMPLICIT_AUTHORIZATION_URL+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-openapi-small-rye-open-api-config_quarkus-smallrye-openapi-oauth2-implicit-token-url]]`link:#quarkus-smallrye-openapi-small-rye-open-api-config_quarkus-smallrye-openapi-oauth2-implicit-token-url[quarkus.smallrye-openapi.oauth2-implicit-token-url]`


[.description]
--
Add an implicit flow tokenUrl value to the OAuth2 Security Scheme

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_OPENAPI_OAUTH2_IMPLICIT_TOKEN_URL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_OPENAPI_OAUTH2_IMPLICIT_TOKEN_URL+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-openapi-small-rye-open-api-config_quarkus-smallrye-openapi-open-api-version]]`link:#quarkus-smallrye-openapi-small-rye-open-api-config_quarkus-smallrye-openapi-open-api-version[quarkus.smallrye-openapi.open-api-version]`


[.description]
--
Override the openapi version in the Schema document

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_OPENAPI_OPEN_API_VERSION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_OPENAPI_OPEN_API_VERSION+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-openapi-small-rye-open-api-config_quarkus-smallrye-openapi-info-title]]`link:#quarkus-smallrye-openapi-small-rye-open-api-config_quarkus-smallrye-openapi-info-title[quarkus.smallrye-openapi.info-title]`


[.description]
--
Set the title in Info tag in the Schema document

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_OPENAPI_INFO_TITLE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_OPENAPI_INFO_TITLE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-openapi-small-rye-open-api-config_quarkus-smallrye-openapi-info-version]]`link:#quarkus-smallrye-openapi-small-rye-open-api-config_quarkus-smallrye-openapi-info-version[quarkus.smallrye-openapi.info-version]`


[.description]
--
Set the version in Info tag in the Schema document

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_OPENAPI_INFO_VERSION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_OPENAPI_INFO_VERSION+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-openapi-small-rye-open-api-config_quarkus-smallrye-openapi-info-description]]`link:#quarkus-smallrye-openapi-small-rye-open-api-config_quarkus-smallrye-openapi-info-description[quarkus.smallrye-openapi.info-description]`


[.description]
--
Set the description in Info tag in the Schema document

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_OPENAPI_INFO_DESCRIPTION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_OPENAPI_INFO_DESCRIPTION+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-openapi-small-rye-open-api-config_quarkus-smallrye-openapi-info-terms-of-service]]`link:#quarkus-smallrye-openapi-small-rye-open-api-config_quarkus-smallrye-openapi-info-terms-of-service[quarkus.smallrye-openapi.info-terms-of-service]`


[.description]
--
Set the terms of the service in Info tag in the Schema document

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_OPENAPI_INFO_TERMS_OF_SERVICE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_OPENAPI_INFO_TERMS_OF_SERVICE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-openapi-small-rye-open-api-config_quarkus-smallrye-openapi-info-contact-email]]`link:#quarkus-smallrye-openapi-small-rye-open-api-config_quarkus-smallrye-openapi-info-contact-email[quarkus.smallrye-openapi.info-contact-email]`


[.description]
--
Set the contact email in Info tag in the Schema document

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_OPENAPI_INFO_CONTACT_EMAIL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_OPENAPI_INFO_CONTACT_EMAIL+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-openapi-small-rye-open-api-config_quarkus-smallrye-openapi-info-contact-name]]`link:#quarkus-smallrye-openapi-small-rye-open-api-config_quarkus-smallrye-openapi-info-contact-name[quarkus.smallrye-openapi.info-contact-name]`


[.description]
--
Set the contact name in Info tag in the Schema document

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_OPENAPI_INFO_CONTACT_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_OPENAPI_INFO_CONTACT_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-openapi-small-rye-open-api-config_quarkus-smallrye-openapi-info-contact-url]]`link:#quarkus-smallrye-openapi-small-rye-open-api-config_quarkus-smallrye-openapi-info-contact-url[quarkus.smallrye-openapi.info-contact-url]`


[.description]
--
Set the contact url in Info tag in the Schema document

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_OPENAPI_INFO_CONTACT_URL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_OPENAPI_INFO_CONTACT_URL+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-openapi-small-rye-open-api-config_quarkus-smallrye-openapi-info-license-name]]`link:#quarkus-smallrye-openapi-small-rye-open-api-config_quarkus-smallrye-openapi-info-license-name[quarkus.smallrye-openapi.info-license-name]`


[.description]
--
Set the license name in Info tag in the Schema document

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_OPENAPI_INFO_LICENSE_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_OPENAPI_INFO_LICENSE_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-openapi-small-rye-open-api-config_quarkus-smallrye-openapi-info-license-url]]`link:#quarkus-smallrye-openapi-small-rye-open-api-config_quarkus-smallrye-openapi-info-license-url[quarkus.smallrye-openapi.info-license-url]`


[.description]
--
Set the license url in Info tag in the Schema document

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_OPENAPI_INFO_LICENSE_URL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_OPENAPI_INFO_LICENSE_URL+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-openapi-small-rye-open-api-config_quarkus-smallrye-openapi-operation-id-strategy]]`link:#quarkus-smallrye-openapi-small-rye-open-api-config_quarkus-smallrye-openapi-operation-id-strategy[quarkus.smallrye-openapi.operation-id-strategy]`


[.description]
--
Set the strategy to automatically create an operation Id

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_OPENAPI_OPERATION_ID_STRATEGY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_OPENAPI_OPERATION_ID_STRATEGY+++`
endif::add-copy-button-to-env-var[]
-- a|
`method`, `class-method`, `package-class-method` 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-openapi-small-rye-open-api-config_quarkus-smallrye-openapi-security-scheme-extensions-security-scheme-extensions]]`link:#quarkus-smallrye-openapi-small-rye-open-api-config_quarkus-smallrye-openapi-security-scheme-extensions-security-scheme-extensions[quarkus.smallrye-openapi.security-scheme-extensions]`


[.description]
--
Add one or more extensions to the security scheme

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_OPENAPI_SECURITY_SCHEME_EXTENSIONS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_OPENAPI_SECURITY_SCHEME_EXTENSIONS+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,String>` 
|

|===